# MaxScale

./: CMakeLists.txt  VERSION
Documentation/: Documentation-Contents.md
Documentation/Getting-Started/: Building-MaxScale-from-Source-Code.md  Configuration-Guide.md
Documentation/Routers/: Avrorouter.md  Binlogrouter.md
avro/: CMakeLists.txt  maxavro.c  maxavro.h  maxavro_datablock.c  maxavro_file.c  maxavro_file_check.c  maxavro_record.c  maxavro_schema.c  maxavrocheck.c
avro/test/: test_values.c
cmake/: FindMariaDBConnector.cmake  defaults.cmake  macros.cmake
etc/init.d/: maxscale.in
etc/ubuntu/init.d/: maxscale.in
query_classifier/: query_classifier.cc
query_classifier/qc_mysqlembedded/: qc_mysqlembedded.cc
query_classifier/qc_pp/: qc_pp.c
server/core/: CMakeLists.txt  buffer.c  buffer_queue.c  config.c  dbusers.c  dcb.c  filter.c  gateway.c  gw_ssl.c  gw_utils.c  gwbitmask.c  housekeeper.c  listener.c  load_utils.c  log_manager.cc  modutil.c  monitor.c  mysql_binlog.c  mysql_utils.c  poll.c  random_jkiss.c  server.c  service.c  session.c  spinlock.c
server/core/test/: test_mysql_users.c  testdcb.c  testpoll.c  testservice.c
server/include/: .swp  adminusers.h  buffer.h  buffer_queue.h  dbusers.h  dcb.h  filter.h  gw.h  gw_authenticator.h  gw_protocol.h  gw_ssl.h  gwbitmask.h  listener.h  modinfo.h  modules.h  modutil.h  mysql_binlog.h  mysql_utils.h  poll.h  server.h  session.h  spinlock.h
server/include/maxscale/: poll.h
server/modules/authenticator/: CMakeLists.txt  cdc_plain_auth.c  max_admin_auth.c  mysql_auth.c  null_auth.c
server/modules/filter/: CMakeLists.txt  datastream.c  luafilter.c  mqfilter.c  namedserverfilter.c  qlafilter.c  regexfilter.c  slavelag.c  tee.c  testfilter.c  topfilter.c
server/modules/filter/dbfwfilter/: dbfwfilter.c
server/modules/filter/hint/: hintfilter.c
server/modules/include/: avro.h  avro_schema.h  avrorouter.h  binlog_common.h  blr.h  blr_constants.h  blr_defines.h  cdc.h  mxs_avro.h  mysql_auth.h  mysql_client_server_protocol.h  rbr.h  readwritesplit.h
server/modules/monitor/: galeramon.c  mmmon.c  mysql_mon.c  ndbclustermon.c
server/modules/protocol/: CMakeLists.txt  cdc.c  httpd.c  maxscaled.c  mysql_backend.c  mysql_client.c  mysql_common.c  telnetd.c  testprotocol.c
server/modules/routing/: CMakeLists.txt  cli.c  debugcmd.c  readconnroute.c
server/modules/routing/avro/: CMakeLists.txt  avro.c  avro_client.c  avro_file.c  avro_index.c  avro_rbr.c  avro_schema.c  rbr.c
server/modules/routing/binlog/: CMakeLists.txt  binlog_common.c  blr.c  blr_file.c  blr_master.c  blr_slave.c  maxbinlogcheck.c
server/modules/routing/binlog/test/: CMakeLists.txt
server/modules/routing/readwritesplit/: readwritesplit.c
server/modules/routing/schemarouter/: schemarouter.c  shardrouter.c
server/modules/routing/test/: cdc.py  cdc_users.py
utils/: skygw_debug.h  skygw_utils.cc  skygw_utils.h
