if(BUILD_TESTS)
  add_executable(testbinlogrouter testbinlog.c ../blr.c ../binlog_common.c ../blr_slave.c ../blr_master.c ../blr_file.c ../blr_cache.c ../../avro/avro_schema.c ../../avro/rbr.c)
  target_link_libraries(testbinlogrouter fullcore ssl pthread log_manager avro jansson)
  add_test(TestBinlogRouter ${CMAKE_CURRENT_BINARY_DIR}/testbinlogrouter)
endif()
